Captions are truncated if too long. Added fukung plugin. Default plugin: beginning of URL not tested anymore. Fixes for Amazon, Imgur, Subimg and Tumblr.

--- a/hoverzoom.css
+++ b/hoverzoom.css
@@ -30,10 +30,13 @@
 }
 #hoverZoomCaption {
 	font: menu;
-	font-size: 8pt;
+	font-size: 11px;
 	font-weight: bold;
 	color: #333;
 	text-align: center;
+	max-height: 27px;
+	overflow: hidden;
+	vertical-align: top;
 }
 #hoverZoomResizedImg {
 	position: absolute;
